fix: Font wrap in the home page on windows chrome (#122)

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -157,7 +157,7 @@
       position: relative;
       top: -3px;
       height: 64px;
-      width: 212px;
+      width: 220px;
       overflow: hidden;
       vertical-align: middle;
       .moveList {
